# whimgui

./: LICENSE  README.md  default.nix  whimgui.cabal  whimgui.nix
app/: Main.hs
shaders/: basic.vert  first_raymarch.frag  foo.frag  rhombus.frag  sigh.frag
src/: GLAttempt.hs  Lib.hs  OpenGLExample.hs
src/Whimgui/: Program.hs  Shader.hs
