cabal-version:       2.2
name:                whimgui
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mankyKitty/whimgui#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Sean Chalmers
maintainer:          sean@qfpl.io
copyright:           Copyright: (c) 2019 Sean Chalmers
category:            Graphics
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
extra-source-files:  stack.yaml
                   , cabal.project.local

source-repository head
  type:     git
  location: https://github.com/mankyKitty/whimgui

Flag development {
  Description: Enable `-Werror`
  manual: True
  default: False
}

common dev-options
  build-depends:       lens
                     , containers
                     , vector
                     , bytestring
                     , text
                     , sdl2
                     , linear
                     , gl
                     , StateVar

  if flag(development)
    ghc-options:       -Werror
  if impl(ghc >= 8.0)
    ghc-options:       -Wincomplete-uni-patterns -Wincomplete-record-updates -Wredundant-constraints -Widentities
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
  ghc-options:         -Wall

library
  import:              dev-options
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , GLAttempt
                     , Whimgui.Shader
                     , Whimgui.Program

  build-depends:       base >= 4.3 && < 5
  default-language:    Haskell2010

executable whimgui
  import:              dev-options
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2
  -- ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , whimgui
  default-language:    Haskell2010

test-suite whimgui-test
  import:              dev-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , whimgui
                     , hedgehog
  default-language:    Haskell2010

-- benchmark whimgui-bench
--   import:              dev-options
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      bench
--   main-is:             Bench.hs
--   build-depends:       base
--                      , whimgui
--                      , criterion
--   default-language:    Haskell2010
